--- a/app/views/alarms/index.html.haml
+++ b/app/views/alarms/index.html.haml
@@ -13,5 +13,6 @@
         %input.content__inner__time__alarm__input{type: "checkbox"}
         13:00
     .content__inner__alarmstop
-      %button アラームを止める
+      = link_to "/alarms/new" do
+        アラームを止める
 
