--- a/app/assets/stylesheets/modules/_variable.scss
+++ b/app/assets/stylesheets/modules/_variable.scss
@@ -18,3 +18,7 @@ $main_back_color: rgb(245, 245, 245);
 $dark_gray:  rgb(230, 230, 230);
 $normal_gray: rgb(240, 240, 240);
 $light_gray: rgb(250, 250, 250);
+
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+JP');
+
+$main_font: 'Source Sans Pro'
