--- a/app/views/alarms/new.html.haml
+++ b/app/views/alarms/new.html.haml
@@ -2,30 +2,39 @@
 
 %main.content
   .content__inner
-    = form_with(model: @feeling , data: { remote: false }) do |f|
+    = form_with(model: @rate,url: alarms_path, data: { remote: false }) do |f|
       .form-box
-        .form_box__feeling
-          .form_box__feeling--feel-title
+        %h2.form_box__title
+          今日の記録
+        .form_box__rate
+          .form_box__rate__feel-title
             起きたときの気分
-          .form_box__feeling--feel-input
+          .form_box__rate__feel-input
             = f.number_field :feel, placeholder:  '評価', value: 1, max: 10, min: 1, html: { class: "search__query", style: 'text-align: right;' } 
-          .form_box__feeling--sleep-title
+        .form_box__rate
+          .form_box__rate__sleep-title
             すんなり眠れた
-          .form_box__feeling--sleep-input
+          .form_box__rate__sleep-input
             = f.number_field :sleep, placeholder: '評価', value: 1, max: 10, min: 1, html: { class: "search__query", style: 'text-align: right;' } 
-          .form_box__feeling--awake-title
+        .form_box__rate
+          .form_box__rate__awake-title
             スッキリ起きた
-          .form_box__feeling--awake-input
+          .form_box__rate__awake-input
             = f.number_field :awake, placeholder:  '評価', value: 1, max: 10, min: 1, html: { class: "search__query", style: 'text-align: right;' } 
-          .form_box__feeling--tried-title
+        .form_box__rate
+          .form_box__rate__tried-title
             疲れが取れた
-          .form_box__feeling--tired-input
+          .form_box__rate__tired-input
             = f.number_field :tired, placeholder: '評価', value: 1, max: 10, min: 1, html: { class: "search__query", style: 'text-align: right;' } 
-          .form_box__feeling--body-title
+        .form_box__rate
+          .form_box__rate__body-title
             身体の重さ
-          .form_box__feeling--body-input
+          .form_box__rate__body-input
             = f.number_field :body, placeholder: '評価', value: 1, max: 10, min: 1, html: { class: "search__query", style: 'text-align: right;' } 
-          .form_box__feeling--memo
-            = f.text_field :memo, placeholder: "気になったことを記入してください"
-          .form_box__feeling--submit
-            = f.submit "保存する"
+        .form_box__rate
+          .form_box__rate__memo-title
+            メモ
+          .form_box__rate__memo-input
+          = f.text_field :memo, placeholder: "気になったことを記入してください"
+        .form_box__rate__submit
+          = f.submit "保存する"
