--- a/app/assets/stylesheets/modules/_mixin.scss
+++ b/app/assets/stylesheets/modules/_mixin.scss
@@ -9,3 +9,9 @@
   display: flex;
   justify-content: space-between;
 }
+
+/* 罫線　*/
+@mixin border_set{
+  border: solid;
+  border-color: steelblue;
+}
