set radio button

--- a/app/views/alarms/create.html.haml
+++ b/app/views/alarms/create.html.haml
@@ -13,17 +13,17 @@
         = @rate.feel
     .form_box__rate
       .form_box__rate__title
-        すんなり眠れた
+        睡眠の質
       .form_box__rate__input
         = @rate.sleep
     .form_box__rate.form_box__rate--white
       .form_box__rate__title
-        スッキリ起きた
+        目覚めたとき
       .form_box__rate__input
         = @rate.awake
     .form_box__rate
       .form_box__rate__title
-        疲れが取れた
+        疲労感
       .form_box__rate__input
         = @rate.tired 
     .form_box__rate.form_box__rate--white
