make alarm_time_table

--- a/app/views/alarms/new.html.haml
+++ b/app/views/alarms/new.html.haml
@@ -7,42 +7,42 @@
         %h2.form_box__title
           今日の記録
         .form_box__rate
-          .form_box__rate__feel-title
+          .form_box__rate__title
             起きたときの気分
           .form_box__rate__input
             - Rate.feels.each do | feel |
-              = f.label feel[0],class: ".form_box__rate__input__label"
+              = f.label feel[0],class: "form_box__rate__input__label"
               = f.radio_button :feel, feel[0]
         .form_box__rate
-          .form_box__rate__sleep-title
+          .form_box__rate__title
             睡眠の質
           .form_box__rate__input
             - Rate.sleeps.each do | sleep |
-              = f.label sleep[0],class: ".form_box__rate__input__label"
+              = f.label sleep[0],class: "form_box__rate__input__label"
               = f.radio_button :sleep, sleep[0]
         .form_box__rate
-          .form_box__rate__awake-title
+          .form_box__rate__title
             目覚めたとき
           .form_box__rate__input
             - Rate.awakes.each do | awake |
-              = f.label awake[0],class: ".form_box__rate__input__label"
+              = f.label awake[0],class: "form_box__rate__input__label"
               = f.radio_button :awake, awake[0]
         .form_box__rate
-          .form_box__rate__tried-title
+          .form_box__rate__title
             疲れが取れた
           .form_box__rate__input
             - Rate.tireds.each do | tired |
-              = f.label tired[0],class: ".form_box__rate__input__label"
+              = f.label tired[0],class: "form_box__rate__input__label"
               = f.radio_button :tired, tired[0]
         .form_box__rate
-          .form_box__rate__body-title
+          .form_box__rate__title
             身体の重さ
           .form_box__rate__input
             - Rate.bodies.each do | body |
-              = f.label body[0],class: ".form_box__rate__input__label"
+              = f.label body[0],class: "form_box__rate__input__label"
               = f.radio_button :body, body[0]
         .form_box__rate
-          .form_box__memo-title
+          .form_box__rate__title
             メモ
           .form_box__memo__input
           = f.text_area :memo, placeholder: "気になったことを記入してください" ,class: "input-memo"
