--- a/app/views/alarms/show.html.haml
+++ b/app/views/alarms/show.html.haml
@@ -16,6 +16,6 @@
             - @alarm_time.errors.full_messages_for(:time).each do |alarm|
               = alarm
           =f.submit "保存する",type: 'button', onclick: 'submit()';
-    .content__inner__alarmstop
-      = link_to "/alarms/new" do
-        アラームを止める
+      .content__inner__alarmstop
+        = link_to "/alarms/new" do
+          アラームを止めるa
